# LiteVault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md
backend/: .env.example  ARCHITECTURE_RULES.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_clerk_user_id.py  003_add_profile_fields.py  004_add_tags_table.py  005_add_search_indexes.py  006_job_dispatch_listen_notify.py  007_add_color_to_tags.py  008_add_item_tags_table.py  009_add_tags_soft_delete.py  010_add_item_tag_suggestions.py  011_expand_tag_color_column.py  2faeb1beb78b_add_enrichment_mode_to_items.py  3b9894917ca2_add_uploads_and_item_attachments.py  f11ba5bc6cb2_add_ai_usage_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py  error_handlers.py  middleware.py
backend/app/api/schemas/: errors.py  items.py  library.py  search.py  tags.py  uploads.py
backend/app/api/v1/: auth.py  health.py  items.py  library.py  search.py  tags.py  uploads.py
backend/app/application/items/: __init__.py  create_item.py  dtos.py  get_item.py  get_pending_items.py  retry_enrichment.py  update_item.py
backend/app/domain/: exceptions.py  value_objects.py
backend/prompts/: enrichment_system.md
backend/tests/: conftest.py  test_auth.py  test_enrichment.py  test_health.py  test_items.py  test_library.py  test_profile.py  test_prompt_loader.py  test_search.py  test_tags.py  test_uploads.py
deploy/: .env.example  (+8 more)
(+320 files in other folders)
